# solar-grabber

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml.example  build.rs  docker-compose.yml  renovate.json
.forgejo/workflows/: audit.yml  check-lint.yml  release.yml
.gitea/workflows/: cargo.yml  check-lint.yml  release.yml
debian/: solar-grabber.service
src/: lib.rs  main.rs  services.rs  update.rs
src/services/: hoymiles.rs  my_autarco.rs
