[package]
name = "solar-grabber"
version = "0.1.1"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
description = """"
Web service that provides a REST API layer over cloud sites/services/APIs to
get statistical data of your solar panels.
"""
readme = "README.md"
repository = "https://git.luon.net/paul/solar-grabber"
license = "MIT"

[dependencies]
color-eyre = "0.6.2"
enum_dispatch = "0.3.9"
once_cell = "1.9.0"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.116"
toml = "0.5.6"
url = "2.2.2"
