[package]
name = "solar-grabber"
version = "0.2.2"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
description = """"
Web service that provides a REST API layer over cloud sites/services/APIs to
get statistical data of your solar panels.
"""
readme = "README.md"
repository = "https://git.luon.net/paul/solar-grabber"
license = "MIT"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
color-eyre = "0.6.2"
enum_dispatch = "0.3.9"
md-5 = "0.10.5"
once_cell = "1.9.0"
reqwest = { version = "0.11.6", features = ["cookies", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
thiserror = "1.0.38"
url = "2.2.2"

[build-dependencies]
anyhow = "1.0.68"
vergen = { version = "7.5.0", default_features = false, features = ["build", "git"] }

[package.metadata.deb]
maintainer = "Paul van Tilburg <paul@luon.net>"
copyright = "2022, Paul van Tilburg"
depends = "$auto, systemd"
extended-description = """\
Solar Grabber is web service that provides a REST API layer over various cloud
sites/services/APIs to get statistical data of your solar panels.

It currently supports the following services:

* Hoymiles: https://global.hoymiles.com
* My Autarco: https://my.autarco.com
"""
section = "net"
priority = "optional"
assets = [
  ["README.md", "usr/share/doc/solar-grabber/", "664"],
  ["Rocket.toml.example", "/etc/solar-grabber.toml", "600"],
  ["target/release/solar-grabber", "usr/sbin/solar-grabber", "755"]
]
conf-files = [
  "/etc/solar-grabber.toml"
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "solar-grabber" }
